@@ -1,0 +1,4 @@
+<?php
+
+#[Attr(FOOS)]
+function test() {}
